Fix body overflow
Fix body horizental overflow on slow internet

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,7 @@ body {
   color: #fbfbfb;
   font-size: 1.4em;
   font-family: "droid", sans-serif;
+  overflow-x: hidden;
 }
 
 a {
@@ -439,7 +440,6 @@ input[type="submit"]:active {
 }
 
 @keyframes show {
-
   0%,
   49.99% {
     opacity: 0;
@@ -577,7 +577,7 @@ input[type="submit"]:active {
 @media screen and (max-width: 682px) {
   .navbar {
     justify-content: center;
-    background-color: rgb(27, 27, 27);
+    background-color: #253545;
     margin-top: -10px;
   }
 
